# fedbrrrr

./: .env.example  .gitignore  CLAUDE.md  README.md  fedbrrrr-implementation-plan.md  pyproject.toml
.github/workflows/: update-data.yml
backend/: __init__.py  config.py  main.py
backend/calculators/: __init__.py  base.py  buffett_indicator.py  consumer_confidence.py  credit_card_delinquency.py  debt_service_ratio.py  fed_balance_sheet.py  food_burden.py  m2_growth.py  mortgage_affordability.py  personal_savings.py  real_wage_growth.py  rent_burden.py  sahm_rule.py  yield_curves.py
backend/collectors/: fred_collector.py  yahoo_collector.py
backend/db/: models.py  repository.py  schema.sql
backend/export/: export_json.py
frontend/: index.html
frontend/assets/css/: styles.css
frontend/assets/js/: app.js  charts.js  utils.js
frontend/data/: indicators.json
frontend/data/economy/: buffett_indicator.json  consumer_confidence.json  fed_balance_sheet.json  m2_growth.json  sahm_rule.json  yield_curve_10y2y.json  yield_curve_10y3m.json
frontend/data/household/: credit_card_delinquency.json  debt_service_ratio.json  food_burden.json  mortgage_affordability.json  personal_savings.json  real_wage_growth.json  rent_burden.json
